--- a/index.html
+++ b/index.html
@@ -1,74 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>GlobalTrade Exports</title>
+<meta charset="UTF-8">
+<title>GlobalTrade Exports</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, Helvetica, sans-serif;
-      background: #0f172a;
-      color: white;
-    }
+<style>
+body{
+  margin:0;
+  font-family:Arial, Helvetica, sans-serif;
+  background:#0f172a;
+  color:#ffffff;
+}
+header{
+  background:#020617;
+  padding:20px;
+  text-align:center;
+}
+header h1{
+  margin:0;
+  color:#38bdf8;
+}
+nav{
+  text-align:center;
+  background:#020617;
+  padding:10px;
+}
+nav a{
+  color:#38bdf8;
+  margin:0 15px;
+  text-decoration:none;
+  font-weight:bold;
+}
+section{
+  padding:40px 20px;
+  max-width:1000px;
+  margin:auto;
+}
+.card{
+  background:#020617;
+  padding:20px;
+  border-radius:10px;
+  margin-bottom:20px;
+}
+.stats{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(200px,1fr));
+  gap:20px;
+}
+.stat{
+  background:#020617;
+  padding:20px;
+  border-radius:10px;
+  text-align:center;
+}
+.stat h2{
+  color:#22d3ee;
+  margin:0;
+  font-size:32px;
+}
+footer{
+  background:#020617;
+  text-align:center;
+  padding:15px;
+  color:#94a3b8;
+}
+</style>
+</head>
 
-    header {
-      background: linear-gradient(90deg, #0ea5e9, #22c55e);
-      padding: 20px;
-      text-align: center;
-    }
+<body>
 
-    header h1 {
-      margin: 0;
-      font-size: 2.2rem;
-    }
+<header>
+  <h1>GlobalTrade Exports</h1>
+  <p>Founder‑Led Import & Export Business</p>
+</header>
 
-    section {
-      padding: 40px 20px;
-      max-width: 1000px;
-      margin: auto;
-    }
+<nav>
+  <a href="#about">About Us</a>
+  <a href="#contact">Contact</a>
+</nav>
 
-    .cards {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 20px;
-      margin-top: 30px;
-    }
+<section id="about">
+  <h2>About Us</h2>
+  <div class="card">
+    <p>
+      GlobalTrade Exports is a learning‑stage import‑export venture focused on
+      agricultural commodities and ethical global trade practices.
+      Our aim is to grow step‑by‑step into a trusted international trading company.
+    </p>
+  </div>
 
-    .card {
-      background: #020617;
-      padding: 20px;
-      border-radius: 10px;
-      text-align: center;
-      border: 1px solid #1e293b;
-    }
+  <div class="stats">
+    <div class="stat">
+      <h2 id="c1">0</h2>
+      <p>Countries Studied</p>
+    </div>
+    <div class="stat">
+      <h2 id="c2">0</h2>
+      <p>Trade Research</p>
+    </div>
+    <div class="stat">
+      <h2 id="c3">0</h2>
+      <p>Business Contacts</p>
+    </div>
+    <div class="stat">
+      <h2 id="c4">0</h2>
+      <p>Years Learning</p>
+    </div>
+  </div>
+</section>
 
-    .stats {
-      display: flex;
-      justify-content: space-around;
-      flex-wrap: wrap;
-      margin-top: 40px;
-      background: rgba(0,0,0,0.4);
-      padding: 30px;
-      border-radius: 10px;
-    }
+<section id="contact">
+  <h2>Contact</h2>
+  <div class="card">
+    <p><b>Name:</b> Akash Bhoyar</p>
+    <p><b>Email:</b> <a href="mailto:Bhoyaraakash074@gmail.com" style="color:#38bdf8;">Bhoyaraakash074@gmail.com</a></p>
+    <p><b>Phone:</b> <a href="tel:+919405547410" style="color:#38bdf8;">+91 9405547410</a></p>
+    <p><b>Location:</b> India</p>
+  </div>
+</section>
 
-    .stat {
-      text-align: center;
-      margin: 10px;
-    }
+<footer>
+© 2026 GlobalTrade Exports • Built with GitHub Pages
+</footer>
 
-    .stat h2 {
-      font-size: 2.2rem;
-      color: #22c55e;
-      margin: 0;
-    }
+<script>
+function animate(id,target){
+  let i=0;
+  const el=document.getElementById(id);
+  const step=setInterval(()=>{
+    i++;
+    el.innerText=i;
+    if(i>=target) clearInterval(step);
+  },30);
+}
+animate("c1",5);
+animate("c2",30);
+animate("c3",12);
+animate("c4",2);
+</script>
 
-    footer {
-      background: #020617;
-      text-align: center;
+</body>
+</html>      text-align: center;
       padding: 15px;
       font-size: 14px;
       color: #94a3b8;
