--- a/index.html
+++ b/index.html
@@ -2,113 +2,567 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Vidarbha Exports | EXIM Trade Data</title>
+<title>GlobalTrade Exports</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
-body{margin:0;font-family:Arial;background:#0f172a;color:#fff}
-header{background:#020617;padding:30px;text-align:center}
-header h1{margin:0;color:#38bdf8}
-nav{background:#020617;padding:10px;text-align:center}
-nav button{background:none;border:none;color:#38bdf8;font-size:16px;margin:0 10px;cursor:pointer}
-section{display:none;padding:30px;max-width:1100px;margin:auto}
-.active{display:block}
-.card{background:#020617;padding:20px;border-radius:10px;margin-bottom:20px}
-table{width:100%;border-collapse:collapse}
-th,td{border:1px solid #334155;padding:8px;text-align:center}
-th{background:#020617}
-footer{text-align:center;padding:15px;background:#020617;color:#94a3b8}
-.whatsapp{position:fixed;bottom:20px;right:20px;background:#25D366;color:#fff;
-padding:15px;border-radius:50%;font-size:22px;text-decoration:none}
+body{
+  margin:0;
+  font-family:Arial, Helvetica, sans-serif;
+  background:#0f172a;
+  color:#ffffff;
+}
+header{
+  background:linear-gradient(90deg,#020617,#020617);
+  padding:40px 20px;
+  text-align:center;
+}
+header h1{
+  margin:0;
+  font-size:36px;
+  color:#38bdf8;
+}
+header p{
+  color:#cbd5f5;
+}
+nav{
+  background:#020617;
+  text-align:center;
+  padding:12px;
+}
+nav a{
+  color:#38bdf8;
+  margin:0 15px;
+  text-decoration:none;
+  font-weight:bold;
+}
+section{
+  padding:50px 20px;
+  max-width:1100px;
+  margin:auto;
+}
+.card{
+  background:#020617;
+  padding:25px;
+  border-radius:12px;
+  margin-bottom:25px;
+}
+.stats{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
+  gap:20px;
+}
+.stat{
+  background:#020617;
+  padding:25px;
+  border-radius:12px;
+  text-align:center;
+}
+.stat h2{
+  color:#22d3ee;
+  font-size:34px;
+  margin:0;
+}
+footer{
+  background:#020617;
+  text-align:center;
+  padding:20px;
+  color:#94a3b8;
+}
+
+/* WhatsApp Button */
+.whatsapp{
+  position:fixed;
+  bottom:20px;
+  right:20px;
+  background:#25D366;
+  color:#fff;
+  padding:15px 18px;
+  border-radius:50%;
+  font-size:24px;
+  text-decoration:none;
+}
+
+/* LinkedIn Button */
+.linkedin{
+  position:fixed;
+  bottom:20px;
+  left:20px;
+  background:#0A66C2;
+  color:#fff;
+  padding:15px 18px;
+  border-radius:50%;
+  font-size:24px;
+  text-decoration:none;
+}
 </style>
 </head>
 
 <body>
 
 <header>
-<h1>Vidarbha Exports</h1>
-<p>EXIM Trade Data • Import Export Insights • Demo Platform</p>
+  <h1>GlobalTrade Exports</h1>
+  <p>Import & Export | Global Business | Trusted Growth</p>
 </header>
 
 <nav>
-<button onclick="show('home')">Home</button>
-<button onclick="show('import')">Import Data</button>
-<button onclick="show('export')">Export Data</button>
-<button onclick="show('pricing')">Pricing</button>
-<button onclick="show('contact')">Contact</button>
+  <a href="#about">About Us</a>
+  <a href="#contact">Contact</a>
 </nav>
 
-<section id="home" class="active">
-<div class="card">
-<h2>About Us</h2>
-<p>
-Vidarbha Exports is a learning‑based EXIM trade data platform providing
-sample import‑export insights for Agriculture and Chemical products.
-This demo website is designed for learning, lead generation, and business presentations.
-</p>
-<p><b>Countries Covered:</b> India, USA, UAE, China, Vietnam, Sri Lanka</p>
-</div>
-</section>
+<section id="about">
+  <h2>About Us</h2>
+  <div class="card">
+    <p>
+      GlobalTrade Exports is an emerging import‑export venture focused on
+      agricultural commodities and international trade learning.
+      Our mission is to grow into a reliable global trading company with
+      ethical and transparent practices.
+    </p>
+  </div>
 
-<section id="import">
-<div class="card">
-<h2>Import Trade Data (Demo)</h2>
-<table>
-<tr><th>Country</th><th>Product</th><th>HS Code</th><th>Value (USD)</th></tr>
-<tr><td>India</td><td>Chemicals</td><td>2809</td><td>120,000</td></tr>
-<tr><td>USA</td><td>Agriculture</td><td>1001</td><td>95,000</td></tr>
-<tr><td>China</td><td>Chemicals</td><td>2902</td><td>210,000</td></tr>
-</table>
-</div>
-</section>
-
-<section id="export">
-<div class="card">
-<h2>Export Trade Data (Demo)</h2>
-<table>
-<tr><th>Country</th><th>Product</th><th>HS Code</th><th>Value (USD)</th></tr>
-<tr><td>UAE</td><td>Agriculture</td><td>0713</td><td>80,000</td></tr>
-<tr><td>Vietnam</td><td>Chemicals</td><td>2811</td><td>65,000</td></tr>
-<tr><td>Sri Lanka</td><td>Agriculture</td><td>0901</td><td>50,000</td></tr>
-</table>
-</div>
-</section>
-
-<section id="pricing">
-<div class="card">
-<h2>Pricing (Sample)</h2>
-<ul>
-<li>Basic Demo Access – FREE</li>
-<li>Monthly Data Report – ₹4,999</li>
-<li>Custom Business Report – Contact Us</li>
-</ul>
-</div>
+  <div class="stats">
+    <div class="stat">
+      <h2 id="c1">0</h2>
+      <p>Countries Studied</p>
+    </div>
+    <div class="stat">
+      <h2 id="c2">0</h2>
+      <p>Trade Research</p>
+    </div>
+    <div class="stat">
+      <h2 id="c3">0</h2>
+      <p>Business Contacts</p>
+    </div>
+    <div class="stat">
+      <h2 id="c4">0</h2>
+      <p>Years Learning</p>
+    </div>
+  </div>
 </section>
 
 <section id="contact">
-<div class="card">
-<h2>Contact Us</h2>
-<p><b>Email:</b> <a style="color:#38bdf8" href="mailto:bhoyaraakash074@gmail.com">bhoyaraakash074@gmail.com</a></p>
-<p><b>WhatsApp:</b> <a style="color:#38bdf8" href="https://wa.me/919405547410">Chat Now</a></p>
-<p>Phone number is not displayed publicly.</p>
-</div>
+  <h2>Contact</h2>
+  <div class="card">
+    <p><b>Name:</b> Akash Bhoyar</p>
+    <p><b>Email:</b> <a href="mailto:Bhoyaraakash074@gmail.com" style="color:#38bdf8;">Bhoyaraakash074@gmail.com</a></p>
+    <p><b>Phone:</b> <a href="tel:+919405547410" style="color:#38bdf8;">+91 9405547410</a></p>
+    <p><b>LinkedIn:</b> <a href="https://www.linkedin.com" style="color:#38bdf8;">Visit Profile</a></p>
+  </div>
 </section>
 
 <footer>
-© 2026 Vidarbha Exports • EXIM Trade Data Demo
+© 2026 GlobalTrade Exports • Powered by GitHub Pages
 </footer>
 
+<!-- WhatsApp Button -->
 <a class="whatsapp" href="https://wa.me/919405547410" target="_blank">💬</a>
 
+<!-- LinkedIn Button -->
+<a class="linkedin" href="https://www.linkedin.com" target="_blank">in</a>
+
 <script>
-function show(id){
-document.querySelectorAll("section").forEach(s=>s.classList.remove("active"));
-document.getElementById(id).classList.add("active");
+function animate(id,target){
+  let i=0;
+  const el=document.getElementById(id);
+  const step=setInterval(()=>{
+    i++;
+    el.innerText=i;
+    if(i>=target) clearInterval(step);
+  },30);
 }
+animate("c1",6);
+animate("c2",40);
+animate("c3",15);
+animate("c4",2);
 </script>
 
 </body>
 </html>/* WhatsApp Button */
+.whatsapp{
+  position:fixed;
+  bottom:20px;
+  right:20px;
+  background:#25D366;
+  color:#fff;
+  padding:15px 18px;
+  border-radius:50%;
+  font-size:24px;
+  text-decoration:none;
+}
+
+/* LinkedIn Button */
+.linkedin{
+  position:fixed;
+  bottom:20px;
+  left:20px;
+  background:#0A66C2;
+  color:#fff;
+  padding:15px 18px;
+  border-radius:50%;
+  font-size:24px;
+  text-decoration:none;
+}
+</style>
+</head>
+
+<body>
+
+<header>
+  <h1>GlobalTrade Exports</h1>
+  <p>Import & Export | Global Business | Trusted Growth</p>
+</header>
+
+<nav>
+  <a href="#about">About Us</a>
+  <a href="#contact">Contact</a>
+</nav>
+
+<section id="about">
+  <h2>About Us</h2>
+  <div class="card">
+    <p>
+      GlobalTrade Exports is an emerging import‑export venture focused on
+      agricultural commodities and international trade learning.
+      Our mission is to grow into a reliable global trading company with
+      ethical and transparent practices.
+    </p>
+  </div>
+
+  <div class="stats">
+    <div class="stat">
+      <h2 id="c1">0</h2>
+      <p>Countries Studied</p>
+    </div>
+    <div class="stat">
+      <h2 id="c2">0</h2>
+      <p>Trade Research</p>
+    </div>
+    <div class="stat">
+      <h2 id="c3">0</h2>
+      <p>Business Contacts</p>
+    </div>
+    <div class="stat">
+      <h2 id="c4">0</h2>
+      <p>Years Learning</p>
+    </div>
+  </div>
+</section>
+
+<section id="contact">
+  <h2>Contact</h2>
+  <div class="card">
+    <p><b>Name:</b> Akash Bhoyar</p>
+    <p><b>Email:</b> <a href="mailto:Bhoyaraakash074@gmail.com" style="color:#38bdf8;">Bhoyaraakash074@gmail.com</a></p>
+    <p><b>Phone:</b> <a href="tel:+919405547410" style="color:#38bdf8;">+91 9405547410</a></p>
+    <p><b>LinkedIn:</b> <a href="https://www.linkedin.com" style="color:#38bdf8;">Visit Profile</a></p>
+  </div>
+</section>
+
+<footer>
+© 2026 GlobalTrade Exports • Powered by GitHub Pages
+</footer>
+
+<!-- WhatsApp Button -->
+<a class="whatsapp" href="https://wa.me/919405547410" target="_blank">💬</a>
+
+<!-- LinkedIn Button -->
+<a class="linkedin" href="https://www.linkedin.com" target="_blank">in</a>
+
+<script>
+function animate(id,target){
+  let i=0;
+  const el=document.getElementById(id);
+  const step=setInterval(()=>{
+    i++;
+    el.innerText=i;
+    if(i>=target) clearInterval(step);
+  },30);
+}
+animate("c1",6);
+animate("c2",40);
+animate("c3",15);
+animate("c4",2);
+</script>
+
+</body>
+</html>  max-width:1000px;
+  margin:auto;
+}
+.card{
+  background:#020617;
+  padding:20px;
+  border-radius:10px;
+  margin-bottom:20px;
+}
+.stats{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(200px,1fr));
+  gap:20px;
+}
+.stat{
+  background:#020617;
+  padding:20px;
+  border-radius:10px;
+  text-align:center;
+}
+.stat h2{
+  color:#22d3ee;
+  margin:0;
+  font-size:32px;
+}
+footer{
+  background:#020617;
+  text-align:center;
+  padding:15px;
+  color:#94a3b8;
+}
+</style>
+</head>
+
+<body>
+
+<header>
+  <h1>GlobalTrade Exports</h1>
+  <p>Founder‑Led Import & Export Business</p>
+</header>
+
+<nav>
+  <a href="#about">About Us</a>
+  <a href="#contact">Contact</a>
+</nav>
+
+<section id="about">
+  <h2>About Us</h2>
+  <div class="card">
+    <p>
+      GlobalTrade Exports is a learning‑stage import‑export venture focused on
+      agricultural commodities and ethical global trade practices.
+      Our aim is to grow step‑by‑step into a trusted international trading company.
+    </p>
+  </div>
+
+  <div class="stats">
+    <div class="stat">
+      <h2 id="c1">0</h2>
+      <p>Countries Studied</p>
+    </div>
+    <div class="stat">
+      <h2 id="c2">0</h2>
+      <p>Trade Research</p>
+    </div>
+    <div class="stat">
+      <h2 id="c3">0</h2>
+      <p>Business Contacts</p>
+    </div>
+    <div class="stat">
+      <h2 id="c4">0</h2>
+      <p>Years Learning</p>
+    </div>
+  </div>
+</section>
+
+<section id="contact">
+  <h2>Contact</h2>
+  <div class="card">
+    <p><b>Name:</b> Akash Bhoyar</p>
+    <p><b>Email:</b> <a href="mailto:Bhoyaraakash074@gmail.com" style="color:#38bdf8;">Bhoyaraakash074@gmail.com</a></p>
+    <p><b>Phone:</b> <a href="tel:+919405547410" style="color:#38bdf8;">+91 9405547410</a></p>
+    <p><b>Location:</b> India</p>
+  </div>
+</section>
+
+<footer>
+© 2026 GlobalTrade Exports • Built with GitHub Pages
+</footer>
+
+<script>
+function animate(id,target){
+  let i=0;
+  const el=document.getElementById(id);
+  const step=setInterval(()=>{
+    i++;
+    el.innerText=i;
+    if(i>=target) clearInterval(step);
+  },30);
+}
+animate("c1",5);
+animate("c2",30);
+animate("c3",12);
+animate("c4",2);
+</script>
+
+</body>
+</html>      text-align: center;
+      padding: 15px;
+      font-size: 14px;
+      color: #94a3b8;
+    }
+
+    button {
+      padding: 12px 24px;
+      background: #22c55e;
+      border: none;
+      border-radius: 6px;
+      color: black;
+      font-size: 16px;
+      cursor: pointer;
+      margin-top: 20px;
+    }
+
+    button:hover {
+      background: #16a34a;
+    }
+  </style>
+</head>
+
+<body>
+
+<header>
+  <h1>GlobalTrade Exports</h1>
+  <p>Founder-led Agricultural & Industrial Export Company</p>
+</header>
+
+<section>
+  <h2>About Us</h2>
+  <p>
+    GlobalTrade Exports is a founder-led export company delivering
+    high‑quality agricultural and industrial products to global markets.
+    We focus on trust, quality, and long‑term partnerships.
+  </p>
+
+  <button>Contact Us</button>
+
+  <div class="cards">
+    <div class="card">
+      <h3>Agricultural Products</h3>
+      <p>Premium grains, spices, and fresh produce.</p>
+    </div>
+    <div class="card">
+      <h3>Industrial Goods</h3>
+      <p>Reliable industrial materials for global supply.</p>
+    </div>
+    <div class="card">
+      <h3>Global Logistics</h3>
+      <p>Fast, safe, and compliant export solutions.</p>
+    </div>
+  </div>
+
+  <div class="stats">
+    <div class="stat">
+      <h2 id="c1">0</h2>
+      <p>Countries Served</p>
+    </div>
+    <div class="stat">
+      <h2 id="c2">0</h2>
+      <p>Shipments Completed</p>
+    </div>
+    <div class="stat">
+      <h2 id="c3">0</h2>
+      <p>Clients Worldwide</p>
+    </div>
+    <div class="stat">
+      <h2 id="c4">0</h2>
+      <p>Years Experience</p>
+    </div>
+  </div>
+</section>
+
+<footer>
+  © 2026 GlobalTrade Exports. All rights reserved.
+</footer>
+
+<script>
+  function animate(id, target) {
+    let i = 0;
+    const el = document.getElementById(id);
+    const step = setInterval(() => {
+      i++;
+      el.innerText = i;
+      if (i >= target) clearInterval(step);
+    }, 30);
+  }
+
+  animate("c1", 5);
+  animate("c2", 30);
+  animate("c3", 12);
+  animate("c4", 2);
+</script>
+
+</body>
+</html><!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>GlobalTrade Exports</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<style>
+body{
+  margin:0;
+  font-family:Arial, Helvetica, sans-serif;
+  background:#0f172a;
+  color:#ffffff;
+}
+header{
+  background:linear-gradient(90deg,#020617,#020617);
+  padding:40px 20px;
+  text-align:center;
+}
+header h1{
+  margin:0;
+  font-size:36px;
+  color:#38bdf8;
+}
+header p{
+  color:#cbd5f5;
+}
+nav{
+  background:#020617;
+  text-align:center;
+  padding:12px;
+}
+nav a{
+  color:#38bdf8;
+  margin:0 15px;
+  text-decoration:none;
+  font-weight:bold;
+}
+section{
+  padding:50px 20px;
+  max-width:1100px;
+  margin:auto;
+}
+.card{
+  background:#020617;
+  padding:25px;
+  border-radius:12px;
+  margin-bottom:25px;
+}
+.stats{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
+  gap:20px;
+}
+.stat{
+  background:#020617;
+  padding:25px;
+  border-radius:12px;
+  text-align:center;
+}
+.stat h2{
+  color:#22d3ee;
+  font-size:34px;
+  margin:0;
+}
+footer{
+  background:#020617;
+  text-align:center;
+  padding:20px;
+  color:#94a3b8;
+}
+
+/* WhatsApp Button */
 .whatsapp{
   position:fixed;
   bottom:20px;
