--- a/index.html
+++ b/index.html
@@ -1,76 +1,228 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Vidarbha Exports | Premium EXIM Intelligence</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>Vidarbha Exports | Global EXIM Trade</title>
+
+<!-- Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
 <style>
 :root{
- --bg:#020617;
- --glass:rgba(255,255,255,0.06);
- --border:rgba(255,255,255,0.12);
- --accent:#38bdf8;
- --accent2:#22d3ee;
- --text:#e5e7eb;
+  --gold:#d4af37;
+  --dark:#0b0f1a;
+  --light:#ffffff;
+  --blue:#1f3cff;
 }
-*{box-sizing:border-box}
-body{
- margin:0;
- font-family:Inter,Segoe UI,Arial;
- background:radial-gradient(circle at top,#020617,#020617);
- color:var(--text);
+*{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif;}
+body{background:var(--dark);color:var(--light);line-height:1.6}
+
+/* NAVBAR */
+nav{
+  position:fixed;top:0;width:100%;
+  background:rgba(11,15,26,.9);
+  display:flex;justify-content:space-between;align-items:center;
+  padding:15px 8%;z-index:1000;
+  backdrop-filter: blur(10px);
 }
+nav h1{color:var(--gold);font-size:22px;font-weight:700}
+nav a{
+  color:#ddd;text-decoration:none;margin-left:25px;
+  transition:.3s
+}
+nav a:hover{color:var(--gold)}
 
 /* HERO */
 .hero{
- padding:90px 20px;
- text-align:center;
+  min-height:100vh;
+  background:
+  linear-gradient(to right,rgba(0,0,0,.7),rgba(0,0,0,.2)),
+  url("https://images.unsplash.com/photo-1586528116311-ad8dd3c8310d") center/cover no-repeat;
+  display:flex;align-items:center;
+  padding:120px 8% 40px;
 }
-.hero h1{
- font-size:56px;
- margin:0;
- background:linear-gradient(90deg,var(--accent),var(--accent2));
- -webkit-background-clip:text;
- color:transparent;
+.hero h2{font-size:52px;font-weight:700}
+.hero span{color:var(--gold)}
+.hero p{max-width:600px;margin:20px 0;color:#ddd}
+.btn{
+  display:inline-block;
+  padding:14px 32px;
+  background:var(--gold);
+  color:#000;font-weight:600;
+  border-radius:30px;
+  text-decoration:none;
+  transition:.3s
 }
-.hero p{
- font-size:20px;
- color:#cbd5f5;
- margin-top:10px;
-}
-
-/* NAV */
-nav{
- position:sticky;top:0;z-index:99;
- backdrop-filter:blur(14px);
- background:rgba(2,6,23,.6);
- border-bottom:1px solid var(--border);
- display:flex;
- justify-content:center;
- gap:14px;
- padding:14px;
-}
-nav button{
- background:var(--glass);
- border:1px solid var(--border);
- color:var(--accent);
- padding:10px 18px;
- border-radius:999px;
- cursor:pointer;
- transition:.3s;
-}
-nav button:hover{
- background:var(--accent);
- color:#020617;
-}
+.btn:hover{transform:translateY(-3px);box-shadow:0 10px 30px rgba(212,175,55,.4)}
 
 /* SECTIONS */
-section{
- display:none;
- padding:60px 20px;
- max-width:1200px;
+section{padding:90px 8%}
+.title{text-align:center;margin-bottom:50px}
+.title h3{font-size:36px;color:var(--gold)}
+.title p{color:#aaa}
+
+/* ABOUT */
+.about-grid{
+  display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
+  gap:40px;align-items:center
+}
+.about-box{
+  background:#11162a;
+  padding:35px;border-radius:20px;
+  box-shadow:0 0 40px rgba(0,0,0,.4)
+}
+
+/* SERVICES */
+.services{
+  display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
+  gap:30px
+}
+.card{
+  background:linear-gradient(145deg,#121833,#0b0f1a);
+  padding:30px;border-radius:20px;
+  transition:.4s
+}
+.card:hover{transform:translateY(-10px)}
+.card h4{color:var(--gold);margin-bottom:10px}
+
+/* COUNTRIES */
+.flags{
+  display:grid;grid-template-columns:repeat(auto-fit,minmax(140px,1fr));
+  gap:20px;text-align:center
+}
+.flag{
+  background:#11162a;padding:20px;border-radius:16px
+}
+
+/* CONTACT */
+.contact-box{
+  max-width:700px;margin:auto;
+  background:#11162a;padding:40px;border-radius:25px
+}
+.contact-box p{margin:12px 0}
+
+/* FOOTER */
+footer{
+  background:#050812;text-align:center;
+  padding:30px;color:#777
+}
+footer a{color:var(--gold);text-decoration:none}
+
+/* RESPONSIVE */
+@media(max-width:768px){
+  .hero h2{font-size:38px}
+}
+</style>
+</head>
+
+<body>
+
+<!-- NAV -->
+<nav>
+  <h1>Vidarbha Exports</h1>
+  <div>
+    <a href="#about">About</a>
+    <a href="#services">Services</a>
+    <a href="#markets">Markets</a>
+    <a href="#contact">Contact</a>
+  </div>
+</nav>
+
+<!-- HERO -->
+<div class="hero">
+  <div>
+    <h2>Global <span>EXIM Trade</span><br>Done Professionally</h2>
+    <p>Vidarbha Exports connects India with global markets through reliable, data‑driven and compliant export‑import solutions.</p>
+    <a href="#contact" class="btn">Start Trade</a>
+  </div>
+</div>
+
+<!-- ABOUT -->
+<section id="about">
+  <div class="title">
+    <h3>About Us</h3>
+    <p>Trusted Indian Export Partner</p>
+  </div>
+  <div class="about-grid">
+    <div class="about-box">
+      <h4>Who We Are</h4>
+      <p>Vidarbha Exports is an India‑based EXIM trading firm specializing in agriculture and chemical products with global compliance.</p>
+    </div>
+    <div class="about-box">
+      <h4>Our Vision</h4>
+      <p>To become a globally trusted export brand delivering quality, transparency and long‑term partnerships.</p>
+    </div>
+  </div>
+</section>
+
+<!-- SERVICES -->
+<section id="services">
+  <div class="title">
+    <h3>Our Services</h3>
+    <p>End‑to‑End Trade Solutions</p>
+  </div>
+  <div class="services">
+    <div class="card">
+      <h4>Agriculture Exports</h4>
+      <p>High‑quality agricultural products with international standards.</p>
+    </div>
+    <div class="card">
+      <h4>Chemical Products</h4>
+      <p>Reliable sourcing and export of approved chemical goods.</p>
+    </div>
+    <div class="card">
+      <h4>EXIM Trade Data</h4>
+      <p>Market insights, learning demos and lead generation.</p>
+    </div>
+    <div class="card">
+      <h4>Business Clients</h4>
+      <p>Custom solutions for global buyers and importers.</p>
+    </div>
+  </div>
+</section>
+
+<!-- MARKETS -->
+<section id="markets">
+  <div class="title">
+    <h3>Global Presence</h3>
+    <p>Countries We Trade With</p>
+  </div>
+  <div class="flags">
+    <div class="flag">🇮🇳 India</div>
+    <div class="flag">🇺🇸 USA</div>
+    <div class="flag">🇦🇪 UAE</div>
+    <div class="flag">🇨🇳 China</div>
+    <div class="flag">🇻🇳 Vietnam</div>
+    <div class="flag">🇱🇰 Sri Lanka</div>
+  </div>
+</section>
+
+<!-- CONTACT -->
+<section id="contact">
+  <div class="title">
+    <h3>Contact Us</h3>
+    <p>Let’s Do Business</p>
+  </div>
+  <div class="contact-box">
+    <p><strong>Email:</strong> bhoyaraakash074@gmail.com</p>
+    <p><strong>Phone:</strong> Available on request</p>
+    <p><strong>LinkedIn:</strong>
+      <a href="https://www.linkedin.com/in/aakash-bhoyar-945339340" target="_blank">
+        View Profile
+      </a>
+    </p>
+    <p>We respond within 24 hours.</p>
+  </div>
+</section>
+
+<!-- FOOTER -->
+<footer>
+  © 2026 Vidarbha Exports | Designed for Global Trade Excellence
+</footer>
+
+</body>
+</html> max-width:1200px;
  margin:auto;
 }
 .active{display:block;animation:fade .6s}
